👌 UX: fix layout break in form

--- a/app/src/components/FormLogin/styles.module.scss
+++ b/app/src/components/FormLogin/styles.module.scss
@@ -23,7 +23,8 @@
   }
 
   @media (max-width: 1120px) {
-    min-width: 50vw;
+    padding: 3rem 3.5rem;
+    min-width: 60vw;
   }
 
   @media (max-width: 800px) {
